@@ -5,6 +5,7 @@ git-annex (3.20120625) UNRELEASED; urgency=low
     which disables the watch command.
   * Avoid ugly failure mode when moving content from a local repository
     that is not available.
+  * Got rid of the last place that did utf8 decoding.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 25 Jun 2012 11:38:12 -0400
 
